Add sudo step cross-compilation
Signed-off-by: 4IP <4ipxxx@gmail.com>

--- a/.github/workflows/build-pritunl-arm64.yml
+++ b/.github/workflows/build-pritunl-arm64.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           echo "Host Architecture: $(uname -m)"
           echo "Target Architecture: arm64"
-          dpkg --add-architecture arm64
+          sudo dpkg --add-architecture arm64
           sudo update-binfmts --enable qemu-aarch64
 
       - name: Install Go ${{ env.GO_VERSION }}
