--- a/.github/workflows/build-pritunl-arm64.yml
+++ b/.github/workflows/build-pritunl-arm64.yml
@@ -226,10 +226,23 @@ jobs:
           retention-days: 30
 
       - name: Create GitHub Release
-        if: github.event_name == 'release' || startsWith(github.ref, 'refs/tags/')
+        if: github.event_name == 'release' || startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
         uses: softprops/action-gh-release@v1
         with:
           files: pritunl_${{ env.PRITUNL_VERSION }}_arm64.deb
-          tag_name: ${{ env.PRITUNL_VERSION }}
+          tag_name: v${{ env.PRITUNL_VERSION }}
+          name: Pritunl ${{ env.PRITUNL_VERSION }} ARM64
+          body: |
+            
+            - **Version:** ${{ env.PRITUNL_VERSION }}
+            - **Architecture:** arm64 (aarch64)
+            - **Ubuntu:** ${{ matrix.ubuntu_version }}
+            - **Built on:** ${{ github.run_id }}
+            
+            wget https://github.com/${{ github.repository }}/releases/download/v${{ env.PRITUNL_VERSION }}/pritunl_${{ env.PRITUNL_VERSION }}_arm64.deb
+            sudo dpkg -i pritunl_${{ env.PRITUNL_VERSION }}_arm64.deb
+            sudo apt-get install -f
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
